--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "mlm-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
-  }
+	"name": "mlm-frontend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "14.2.5",
+		"react": "18.3.1",
+		"react-dom": "18.3.1"
+	},
+	"devDependencies": {
+		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/forms": "^0.5.7",
+		"@tailwindcss/line-clamp": "^0.4.4",
+		"@tailwindcss/typography": "^0.5.14",
+		"@types/node": "22.4.0",
+		"@types/react": "18.3.3",
+		"@types/react-dom": "18.3.0",
+		"autoprefixer": "10.4.20",
+		"next-themes": "^0.3.0",
+		"postcss": "8.4.41",
+		"react-outside-click-handler": "^1.3.0",
+		"sass": "^1.77.8",
+		"tailwindcss": "3.4.10",
+		"typescript": "5.5.4"
+	}
 }
