--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@types/react-outside-click-handler": "^1.3.3",
 		"next": "14.2.5",
 		"react": "18.3.1",
 		"react-dom": "18.3.1"
