--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@types/react-outside-click-handler": "^1.3.3",
+		"@ant-design/icons": "^5.4.0",
+		"@ant-design/nextjs-registry": "^1.0.1",
+		"@tanstack/react-query": "^5.55.0",
+		"antd": "^5.20.5",
 		"next": "14.2.5",
 		"react": "18.3.1",
 		"react-dom": "18.3.1"
@@ -22,6 +25,7 @@
 		"@types/node": "22.4.0",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
+		"@types/react-outside-click-handler": "^1.3.3",
 		"autoprefixer": "10.4.20",
 		"next-themes": "^0.3.0",
 		"postcss": "8.4.41",
