--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/react-dom": "18.3.0",
     "@types/react-outside-click-handler": "^1.3.3",
     "autoprefixer": "10.4.20",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
     "husky": "^9.1.6",
     "next-themes": "^0.3.0",
     "postcss": "8.4.41",
