--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
